Fix TrendChard x axis misalignment

--- a/src/components/HabitEntryList/HabitEntryList.css
+++ b/src/components/HabitEntryList/HabitEntryList.css
@@ -29,7 +29,7 @@
   align-items: center;
   
   padding: 10px;
-  /* border: 2px solid black; */
+  border: 2px solid black;
   background-color: white;
   color: black;
   width: 100%;
