--- a/src/components/HabitOverview/HabitOverview.css
+++ b/src/components/HabitOverview/HabitOverview.css
@@ -1,9 +1,9 @@
-.habit-overview{
+.habit-overview {
   display: flex;
   align-items: center;
   border: none;
   border-radius: 16px;
-  padding: .5em 1em;
+  padding: 0.5em 1em;
   background-color: transparent;
   box-shadow: var(--drop-shadow-value);
   min-width: min-content;
@@ -12,14 +12,18 @@
   margin: 50px auto;
 }
 
-.habit-overview:active{
-  transform: scale(.98);
+.habit-overview:active {
+  transform: scale(0.98);
+}
+.habit-overview:focus {
+  box-shadow: 0 0 0 2px #ffffff, 0 0 2px 4px #708090;
+  outline: 2px solid transparent;
+  outline-offset: 10px;
 }
 
-.logo-img-container{
-
+.logo-img-container {
 }
 
-.logo-img{
+.logo-img {
   border-radius: 10px;
 }
